@@ -2878,3 +2878,5 @@ snapshot.c: use the fully encapsulated libspectrum_snap
 	 SDL for sound over any other available sound API (Marek).
 20080901 ui/win32/{win32ui.c,win32internals.h,statusbar.c}: Win32: Simplified
 	 WM_SIZE handlers by getting rid of GetClientRect (Marek).
+20080902 ui/win32/win32ui.c: Win32: Implemented gain and lose focus handlers
+	 similiarly to gtk ui (Marek).
